--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -2,9 +2,8 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "./dist",
-    "rootDir": "./src",
-    "declaration": false
+    "declaration": false,
+    "sourceMap": false
   },
-  "include": ["src/**/*"],
-  "exclude": ["node_modules", "test", "dist", "**/*.spec.ts", "cypress"]
+  "exclude": ["node_modules", "test", "**/*.spec.ts", "dist"]
 }
